flex button to the bottom right side and fix overflow text

--- a/wp-content/themes/music-heals/sass/_mixins.scss
+++ b/wp-content/themes/music-heals/sass/_mixins.scss
@@ -42,6 +42,8 @@
 @mixin content-box-left {
 	background-color: rgba(255, 255, 255, 0.8);
 	color: black;
+	display: flex;
+	flex-direction: column;
 }
 
 @mixin content-box-right {
